# E0_Memsetmove

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  LICENSE  readme.md
include/: MemoryOperations.h  Pet.h
src/: memoryoperations.cpp
tests/: tests.cpp
